# facetracking-arduino-turret

./: CMakeLists.txt  README.md  facerec_arduino.ino
include/: serial.hpp
src/: facerec.cpp
